Make sure that the overlay z-index is super high Links open in a new window from the content body, and popup content body

--- a/app/assets/stylesheets/reader.css
+++ b/app/assets/stylesheets/reader.css
@@ -226,7 +226,7 @@
      width:100%;
      height:100%;
      text-align:center;
-     z-index: 1200;
+     z-index: 5000;
      background-image: url("/assets/reader/overlay.png");
 }
 
